<resources>
    <string name="app_name">NUTRIFIT</string>
    <string name="next_btn"><![CDATA[Next >]]></string>
    <string name="haveAccount">Already have an account? Sign In</string>
    <string name="btnSignIn">Sign In</string>
    <string name="noAccount">Don\'t have an account yet? Sign Up</string>
    <string name="date_picker_title">Date of Birth:</string>
    <string name="health_and_nutrition_tips">Health and Nutrition Tips</string>
    <string name="_28_health_and_nutrition_tips_based_on_scientific_evidence">28 health and nutrition tips based on scientific evidence</string>
    <string name="health_tips_for_healthy_lifestyle">Health tips for healthy lifestyle</string>
    <string name="healthy_eating_and_physical_activity_for_life">Healthy eating and physical activity for life</string>
    <string name="search_food">Search Food</string>
    <string name="tips">Tips</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="profile">Profile</string>
</resources>